<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:src="@drawable/logo"
            android:layout_height="@dimen/logo_w_h"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/lbl_forgot_password"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/forgot_password_msg"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/email"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:backgroundTint="@color/colorAccent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:id="@+id/btn_reset_password"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:text="@string/btn_reset_password"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/btn_back"
            android:background="@null"
            android:text="@string/btn_back"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:layout_width="30dp"
        android:id="@+id/progressBar"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        android:layout_height="30dp"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>